--- a/CSS/header.css
+++ b/CSS/header.css
@@ -15,9 +15,17 @@
     justify-content: center;
 }
 
-/* 세로 정렬(between) */
+/* 가로 정렬(between) */
 .flex-center-between{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* 세로 정렬(between) */
+.flex-column-between{
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
@@ -48,6 +56,19 @@ body {
 }
 
 /* body end */
+
+/* border-radius start */
+.border-radius-2vmin{
+    border-radius: 2vmin;
+}
+
+/* .border-radius end */
+
+/* mSmallContainer start */
+.mSmallContainer{
+    width: 85%;
+    height: 90%;
+}
 
 /* section start */
 
