--- a/CSS/mainPage.css
+++ b/CSS/mainPage.css
@@ -1,4 +1,4 @@
-#mainPage{
+#mainPage {
     display: grid;
     grid-template-columns: minmax(90vmin, auto) repeat(1, 1fr);
     grid-gap: 1rem;
@@ -8,9 +8,67 @@
     justify-items: center;
 }
 
-.item{
+#mainPage .item {
     background-color: #ffbcd1;
-    width: 90%;
-    height: 90%;
+    width: 95%;
+    height: 95%;
 }
 
+#mainPage .img, #mainPage img {
+    width: 50px;
+    height: 50px;
+}
+
+/* boardMain start */
+
+#mainPage .mBoard {
+    width: 70%;
+    height: auto;
+    border: 1px solid #000;
+}
+
+.mBoardGrid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+#mainPage .mBoardHead {
+    width: 100%;
+    height: 6.5vmin;
+    border-bottom: 0.1vmin solid #000;
+    grid-column: 1/3;
+}
+
+#mainPage .mBoardHead a {
+    align-self: flex-start;
+    font-size: 1.5vmax;
+    font-weight: bold;
+    text-align: center;
+}
+
+#mainPage .mBoardItem {
+    width: 22vmin;
+    height: 15vmin;
+    margin: 1rem 0;
+}
+
+#mainPage .mBoardItem a{
+    width: 14vmin;
+    height: 14vmin;
+    background-color: rgba(196, 196, 196, 0.09);
+}
+
+
+#mainPage .mSchoolB {
+    grid-column: 1/3;
+}
+
+
+
+
+#mainPage .mBoardSup {
+    width: 40%;
+    height: 100%;
+}
+
+/* boardMain end */
