--- a/CSS/classPage.css
+++ b/CSS/classPage.css
@@ -1,38 +1,93 @@
 #classPage{
-    width: 100%;
+    width: auto;
     height: 100%;
     display: grid;
-    grid-template-columns: minmax(90vmin, auto) repeat(2, 1fr);
+    grid-template-columns: minmax(50vmin, auto) repeat(2, 1fr);
+    grid-gap: 5vmin;
+    place-items: center;
+}
+
+#classPage img{
+    width: 30px;
+    height: 30px;
 }
 
 #classPage .classHomework, .classNoticeBir{
-    width: 30%;
-    height: 85%;
+    width: 90%;
+    height: 90%;
+    background-color: #fff;
 }
 
 #classPage .classImgList{
     width: 25%;
     height: 85%;
-}
-
-#classPage .classHomework{
     background-color: #fff;
 }
 
+/* classHomework start */
+
 #classPage .classHomeworkContainer{
-    width: 80%;
+    width: 90%;
     height: 100%;
 }
 
 #classPage .CHHead{
     width: 100%;
     height: 10vmin;
-    border-bottom: 1.6vmin solid #000;
+    border-bottom: 0.3vmin solid #000;
 }
 
 #classPage .classHomeworkList{
     width: 100%;
     height: 100%;
-    border-bottom: 1vmin solid rgba(141, 141, 141, 0.884);
+}
+
+#classPage .classHomeworkName{
+    width: 100%;
+    height: 10vmin;
+    display: flex;
+    align-self: flex-start;
+    border-bottom: 0.1vmin solid rgba(141, 141, 141, 0.884);
+}
+
+#classPage .classHomeworkName .img{
+    width: 10vmin;
+    height: 10vmin;
+    border-radius: 50%;
+}
+
+#classPage .classHomeworkName .img img{
+    width: 100%;
+    height: 100%;
+}
+
+#classPage .classHomeworkName .classHomeworkText a{
+    font-size: 0.9vmax;
+}
+
+#classPage .classHomeworkName .classHomeworkText p{
+    font-size: 0.9vmax;
+    font-weight: bold;
+}
+
+/* classHomework end */
+
+/* classNoticeBir start */
+
+
+#classPage .classNoticeBirContainer{
+    width: 90%;
+    height: 100%;
+}
+
+#classNotice{
+    width: 100%;
+    height: 100%;
+}
+
+#classPage .CHHead{
+    width: 100%;
+    height: 10vmin;
+    border-bottom: 0.3vmin solid #000;
 }
 
