--- a/CSS/classPage.css
+++ b/CSS/classPage.css
@@ -13,14 +13,13 @@
 }
 
 #classPage .classHomework, .classNoticeBir{
-    width: 90%;
+    width: 93%;
     height: 90%;
 }
 
 #classPage .classImgList{
-    width: 25%;
-    height: 85%;
-    background-color: #fff;
+    width: 75%;
+    height: 90%;
 }
 
 /* classHomework start */
@@ -102,4 +101,141 @@
 
 #classPage .classNoticeHead b{
     font-size: 1vmax;
+}
+
+#classPage .classNoticeContainer{
+    width: 90%;
+    height: 100%;
+}
+
+#classPage .classNoticeList{
+    width: 100%;
+    height: 12vmin;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 2vmin 0;
+    
+}
+
+#classPage .classNoticeList:nth-child(1){
+    background-color: #ffbcd1;
+}
+
+#classPage .classNoticeList:nth-child(2){
+    background-color: #cca9dd;
+}
+
+#classPage .classNoticeList:nth-child(3){
+    background-color: #a9cbd7;
+}
+
+#classPage .classNoticeList .classNoticeListText{
+    width: 90%;
+}
+
+#classPage .classNoticeList p{
+    font-size: 1vmax;
+}
+
+#classPage .classBirthday{
+    width: 100%;
+    height: 35%;
+    background-color: #fff;
+}
+
+#classPage .classBirthdayContainer{
+    width: 90%;
+    height: 90%;
+}
+
+#classPage .classBirImg{
+    width: 30%;
+    height: 100%;
+    border-right: 0.2vmin solid #000;
+}
+
+#classPage .classBirImg img{
+    width: 10vmin;
+    height: 10vmin;
+}
+
+#classPage .classBirList{
+    width: 80%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+#classPage .classBirListHead{
+    width: 90%;
+    grid-column: 1/3;
+    display: flex;
+    justify-self: flex-end;
+}
+
+#classPage .classBirListHead b{
+    font-size: 1vmax;
+    font-weight: bold;
+}
+
+#classPage .classBirList p{
+    display: flex;
+    justify-self: center;
+    font-size: 1vmax;
+}
+
+/* classNoticeBir end */
+
+/* classImg start */
+
+#classPage .classImgList .classImg{
+    width: 80%;
+    height: 30%;
+    background-color: #ffbcd1;
+}
+
+#classPage .classImgList .classImg img{
+    width: 80%;
+    height: 80%;
+}
+
+#classPage .classImgList .classList{
+    width: 80%;
+    height: 60%;
+    background-color: #fff;
+    overflow: hidden;
+}
+
+#classPage .classImgList .classList ul{
+    width: 90%;
+    height: 48vmin;
+    overflow: auto;
+}
+
+::-webkit-scrollbar {
+    width: 1vmin;
+} 
+::-webkit-scrollbar-track {
+    background-color: #4F4949;
+    border-radius: 10vmin;
+} 
+
+::-webkit-scrollbar-thumb{
+    background-color: #fff;
+    border-radius: 1vmin;
+    background-clip: padding-box;
+    border: 0.1vmin solid transparent;
+}
+#classPage .classImgList .classList ul li{
+    width: 90%;
+    height: 6vmin;
+    display: flex;
+    align-items: center;
+    padding: 1vmin 1vmin;
+    font-size: 1vmax;
+}
+
+#classPage .classImgList .classList ul li img{
+    border-radius: 50%;
 }
