--- a/CSS/header.css
+++ b/CSS/header.css
@@ -42,6 +42,15 @@
     align-items: center;
 }
 
+/* 세로 정렬(evenly) */
+
+.flex-column-evenly{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 /* 세로 정령(center) */
 
 .flex-column-center {
